--- a/plugin.xml
+++ b/plugin.xml
@@ -15,6 +15,6 @@
         <config-file parent="/*" target="AndroidManifest.xml"></config-file>
         <source-file src="src/android/GidLibVision.java" target-dir="src/gid/com/gidvisionlib/plugin/GidLibVision" />
         <framework custom="true" src="src/android/GidLibVisionConfig.gradle" type="gradleReference" />
-        <resource-file src="src/android/libs/gidvisionlib.aar" target="libs/gidvisionlib.aar" />
+        <resource-file src="src/android/libs/gidvisionlib-debug.aar" target="libs/gidvisionlib-debug.aar" />
     </platform>
 </plugin>
