--- a/src/android/GidLibVisionConfig.gradle
+++ b/src/android/GidLibVisionConfig.gradle
@@ -8,7 +8,7 @@ repositories{
 dependencies {
     implementation 'com.google.android.gms:play-services-vision:15.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'gidvisionlib'
+    compile files('libs/gidvisionlib-debug.aar')
 }
 
 android {
