--- a/plugin.xml
+++ b/plugin.xml
@@ -9,14 +9,14 @@
     <platform name="android">
         <config-file parent="/*" target="res/xml/config.xml">
             <feature name="GidLibVision">
-                <param name="android-package" value="com.maybank.ocr.plugin" />
+                <param name="android-package" value="org.maybank.ocr.plugin.GidLibVision" />
             </feature>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
             android:name="gid.com.gidvisionlib.ViewActivity.GIDLibVisionMainActivity"
-            android:label="@string/launcher_name"
-            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
+            android:label="@string/launcher_name"            
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             tools:replace="label,theme"/>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest">
@@ -25,7 +25,7 @@
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
             <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
         </config-file>
-        <source-file src="src/android/GidLibVision.java" target-dir="com/maybank/ocr/plugin" />
+        <source-file src="src/android/GidLibVision.java" target-dir="src/org/maybank/ocr/plugin" />
         <framework custom="true" src="src/android/GidLibVisionConfig.gradle" type="gradleReference" />
         <resource-file src="src/android/libs/GIDVisionLibAndroidv27.aar" target="../../libs/GIDVisionLibAndroidv27.aar" />
     </platform>
